@@ -24,5 +24,6 @@ script.on_init(OnStartup)
 script.on_configuration_changed(OnStartup)
 script.on_load(OnLoad)
 Events.RegisterEvent(defines.events.on_runtime_mod_setting_changed)
-Events.RegisterEvent(defines.events.on_entity_damaged, "TypeIsUnit", {{filter = "type", type = "unit"}})
+--Events.RegisterEvent(defines.events.on_entity_damaged, "TypeIsUnit", {{filter = "type", type = "unit"}})
+Events.RegisterEvent(defines.events.on_entity_died, "TypeIsUnit", {{filter = "type", type = "unit"}})
 EventScheduler.RegisterScheduler()
